feat(Swagger Docs): fix ApiController swagger doc annotation to utilize new User Schema
